--- a/main.css
+++ b/main.css
@@ -19,15 +19,23 @@ border: black 2px solid;
 display: flex;
 flex-flow: row wrap;
 justify-content: space-between;
-padding: 5px;
+flex: 0 0 50%;
+padding: 10px;
+
 }
 
 .dark-side {
   background-color: darkseagreen;
   border: black 2px solid;
+  flex: 0 0 50%;
+  padding: 10px;
 }
 
 .school-container {
   display: flex;
   flex-wrap: wrap;                           
+}
+
+.card {
+  margin: 4px;
 }
