--- a/main.css
+++ b/main.css
@@ -5,28 +5,32 @@ body {
 
 .welcome {
 background-color: darkgoldenrod;
-border: black 2px solid;
+
 }
 
 .student-input {
 background-color: black;
-border: rgb(255, 255, 255) 2px solid;
+border-bottom: rgb(255, 255, 255) 2px solid;
 }
 
 .schools {
 background-color: rgb(0, 0, 0);
-border: black 2px solid;
 display: flex;
 flex-flow: row wrap;
-/*justify-content: space-between;*/
 flex: 0 0 50%;
 padding: 10px;
+}
+.welcome-sort {
+background-color: blanchedalmond;
+}
 
+.startStyle {
+  display: none;
 }
 
 .dark-side {
   background-color: rgb(255, 255, 255);
-  border: qqrgb(255, 255, 255) 2px solid;
+  border: black 2px solid;
   flex: 0 0 50%;
   padding: 10px;
   display: flex;
